add_library(base STATIC
    at_exit.cc
    base_switches.cc
    callback_internal.cc
    command_line.cc
    debug/alias.cc
    debug/debugger_posix.cc
    debug/stack_trace.cc
    debug/stack_trace_posix.cc
    files/file_path.cc
    files/file_path_constants.cc
    json/json_writer.cc
    json/string_escape.cc
    lazy_instance.cc
    logging.cc
    memory/ref_counted.cc
    memory/singleton.cc
    pickle.cc
    strings/string16.cc
    strings/string_number_conversions.cc
    strings/string_piece.cc
    strings/stringprintf.cc
    strings/string_split.cc
    strings/string_util.cc
    strings/string_util_constants.cc
    strings/sys_string_conversions_posix.cc
    strings/utf_string_conversions.cc
    strings/utf_string_conversion_utils.cc
    synchronization/condition_variable_posix.cc
    synchronization/lock.cc
    synchronization/lock_impl_posix.cc
    synchronization/waitable_event_posix.cc
    third_party/icu/icu_utf.cc
    threading/platform_thread_internal_posix.cc
    threading/platform_thread_linux.cc
    threading/platform_thread_posix.cc
    threading/thread_id_name_manager.cc
    threading/thread_local_posix.cc
    threading/thread_restrictions.cc
    time/time.cc
    time/time_posix.cc
    values.cc
    vlog.cc
    safe_strerror_posix.cc
    strings/utf_offset_string_conversions.cc
    tracked_objects.cc
    profiler/tracked_time.cc
    location.cc
    profiler/alternate_timer.cc
    threading/thread_local_storage.cc
    threading/thread_local_storage_posix.cc
    process/process_handle_posix.cc
    third_party/dmg_fp/dtoa.cc
    third_party/dmg_fp/g_fmt.cc
)
