add_library(ppapi_cpp STATIC
    cpp/array_output.cc
    cpp/audio_buffer.cc
    cpp/audio.cc
    cpp/audio_config.cc
    cpp/compositor.cc
    cpp/compositor_layer.cc
    cpp/core.cc
    cpp/dev/audio_input_dev.cc
    cpp/dev/buffer_dev.cc
    cpp/dev/crypto_dev.cc
    cpp/dev/cursor_control_dev.cc
    cpp/dev/device_ref_dev.cc
    cpp/dev/file_chooser_dev.cc
    cpp/dev/font_dev.cc
    cpp/dev/ime_input_event_dev.cc
    cpp/dev/memory_dev.cc
    cpp/dev/printing_dev.cc
    cpp/dev/scriptable_object_deprecated.cc
    cpp/dev/scrollbar_dev.cc
    cpp/dev/selection_dev.cc
    cpp/dev/text_input_dev.cc
    cpp/dev/truetype_font_dev.cc
    cpp/dev/url_util_dev.cc
    cpp/dev/video_capture_client_dev.cc
    cpp/dev/video_capture_dev.cc
    cpp/dev/video_decoder_client_dev.cc
    cpp/dev/video_decoder_dev.cc
    cpp/dev/view_dev.cc
    cpp/dev/widget_client_dev.cc
    cpp/dev/widget_dev.cc
    cpp/dev/zoom_dev.cc
    cpp/directory_entry.cc
    cpp/file_io.cc
    cpp/file_ref.cc
    cpp/file_system.cc
    cpp/fullscreen.cc
    cpp/graphics_2d.cc
    cpp/graphics_3d.cc
    cpp/graphics_3d_client.cc
    cpp/host_resolver.cc
    cpp/image_data.cc
    cpp/input_event.cc
    cpp/instance.cc
    cpp/instance_handle.cc
    cpp/media_stream_audio_track.cc
    cpp/media_stream_video_track.cc
    cpp/message_loop.cc
    cpp/module.cc
    cpp/mouse_cursor.cc
    cpp/mouse_lock.cc
    cpp/net_address.cc
    cpp/network_list.cc
    cpp/network_monitor.cc
    cpp/network_proxy.cc
    cpp/private/camera_capabilities_private.cc
    cpp/private/camera_device_private.cc
    cpp/private/content_decryptor_private.cc
    cpp/private/ext_crx_file_system_private.cc
    cpp/private/file_io_private.cc
    cpp/private/find_private.cc
    cpp/private/flash.cc
    cpp/private/flash_clipboard.cc
    cpp/private/flash_device_id.cc
    cpp/private/flash_drm.cc
    cpp/private/flash_file.cc
    cpp/private/flash_font_file.cc
    cpp/private/flash_fullscreen.cc
    cpp/private/flash_menu.cc
    cpp/private/flash_message_loop.cc
    cpp/private/host_resolver_private.cc
    cpp/private/input_event_private.cc
    cpp/private/instance_private.cc
    cpp/private/internal_module.cc
    cpp/private/isolated_file_system_private.cc
    cpp/private/net_address_private.cc
    cpp/private/output_protection_private.cc
    cpp/private/pass_file_handle.cc
    cpp/private/pdf.cc
    cpp/private/platform_verification.cc
    cpp/private/tcp_server_socket_private.cc
    cpp/private/tcp_socket_private.cc
    cpp/private/udp_socket_private.cc
    cpp/private/uma_private.cc
    cpp/private/var_private.cc
    cpp/private/video_destination_private.cc
    cpp/private/video_frame_private.cc
    cpp/private/video_source_private.cc
    cpp/private/x509_certificate_private.cc
    cpp/rect.cc
    cpp/resource.cc
    cpp/tcp_socket.cc
    cpp/text_input_controller.cc
    cpp/trusted/browser_font_trusted.cc
    cpp/trusted/file_chooser_trusted.cc
    cpp/udp_socket.cc
    cpp/url_loader.cc
    cpp/url_request_info.cc
    cpp/url_response_info.cc
    cpp/var_array_buffer.cc
    cpp/var_array.cc
    cpp/var.cc
    cpp/var_dictionary.cc
    cpp/video_decoder.cc
    cpp/video_encoder.cc
    cpp/video_frame.cc
    cpp/view.cc
    cpp/websocket.cc
    utility/graphics/paint_aggregator.cc
    utility/graphics/paint_manager.cc
    utility/threading/lock.cc
    utility/threading/simple_thread.cc
    utility/websocket/websocket_api.cc
)
